# nwws-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: parse.rs
examples/: demo.rs  python_demo.py  summary.rs
fuzz/: README.md
fuzz/corpus/nwws_oi/: mismatched_metadata.xml  segmented_svs.xml  tornado_warning.xml
fuzz/corpus/wmo_message/: invalid_awips_variant.txt  ugc_vtec_warning.txt
python-tests/: test_api.py
python/nwws_rs/: __init__.py
src/: api.rs  daemon.rs  error.rs  geo.rs  header.rs  ingest.rs  lib.rs  oi.rs  oi_client.rs  pid201.rs  product.rs  python.rs  replay.rs  runtime.rs  serve.rs  stream.rs  ugc.rs  vtec.rs  warning.rs  wmo.rs
tests/: cli.rs  integration.rs  properties.proptest-regressions  properties.rs
tests/fixtures/: nwws_oi_example.xml  nwws_oi_segmented_svs.xml  nwws_oi_tornado_warning.xml  wmo_bulletin.txt  wmo_segmented_svs.txt
tools/: bench_pyiem_speed.py  compare_pyiem.py  compare_pyiem_corpus.py  verify.ps1
