[package]
name = "nwws-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance parsers for NOAA Weather Wire Service bulletins and NWWS-OI XMPP stanzas"
keywords = ["weather", "nwws", "noaa", "xmpp", "wmo"]
categories = ["parser-implementations", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
base64 = "0.22"
blake3 = "1.8"
memchr = "2.7"
pyo3 = { version = "0.28.3", optional = true, features = ["abi3-py38", "extension-module"] }
quick-xml = "0.38"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
webpki-roots = "1.0"

[dev-dependencies]
criterion = { version = "0.6", default-features = false }
proptest = "1.9"

[[bench]]
name = "parse"
harness = false
