[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "nwws-rs"
version = "0.1.0"
description = "Python bindings for the nwws-rs NWWS parser, PID201 toolkit, archive workflows, and NWWS-OI client"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "nwws_rs._native"

[tool.pytest.ini_options]
testpaths = ["python-tests"]
